# redfin-ide

./: README.md  cabal.project  hie.yaml  redfin-ide.cabal
js/: custom.js
src/: IDE.hs  Main.hs  Trace.hs  TraceWidget.hs
src/Redfin/: IDE.hs
src/Redfin/IDE/: State.hs  Trace.hs  Types.hs  Widget.hs
src/Redfin/IDE/Types/: Save.hs
src/Redfin/IDE/Widget/: Examples.hs  InitialState.hs  Source.hs  State.hs  Steps.hs  Top.hs  Trace.hs
src/Redfin/IDE/Widget/Top/: Examples.hs  Verification.hs
styles/: custom.css  source.scss
