cabal-version: 1.12

name:           redfin-ide
version:        0.1.0.0
homepage:       https://github.com/geo2a/redfin-ide#readme
bug-reports:    https://github.com/geo2a/redfin-ide/issues
author:         Georgy Lukyanov
maintainer:     mail@egeo2a.info
copyright:      2020 Georgy Lukyanov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/redfin-ide

executable redfin-ide-exe
  main-is: Main.hs
  other-modules:
      Redfin.IDE,
      Redfin.IDE.State,
      Redfin.IDE.Trace,
      Redfin.IDE.Widget.Top
  hs-source-dirs:
      src
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , StandaloneDeriving
                    , OverloadedStrings
                    , ImplicitParams
                    , PatternSynonyms
                    , TupleSections

  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -fno-warn-unused-imports
                    -fno-warn-unused-matches
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , aeson
               , co-log
               , co-log-core
               , concur-core
               , concur-replica
               , containers
               , mtl
               , replica
               , sbv >= 8.9
               , stm
               , text
               , unreasonably-polymorphic-isa
               , wai
               , wai-middleware-static
               , websockets
               , hsass
  default-language: Haskell2010
