cabal-version: 1.12

name:           redfin-ide
version:        0.1.0.0
homepage:       https://github.com/geo2a/redfin-ide#readme
bug-reports:    https://github.com/geo2a/redfin-ide/issues
author:         Georgy Lukyanov
maintainer:     mail@egeo2a.info
copyright:      2020 Georgy Lukyanov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/redfin-ide

executable redfin-ide-exe
  main-is: Main.hs
  other-modules:
      Redfin.IDE,
      Redfin.IDE.Types,
      Redfin.IDE.Types.Save,
      Redfin.IDE.State,
      Redfin.IDE.Trace,
      Redfin.IDE.Widget,
      Redfin.IDE.Widget.InitialState,
      Redfin.IDE.Widget.Source,
      Redfin.IDE.Widget.State,
      Redfin.IDE.Widget.Trace,
      Redfin.IDE.Widget.Top,
      Redfin.IDE.Widget.Top.Examples,
      Redfin.IDE.Widget.Top.Verification
  hs-source-dirs:
      src
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , StandaloneDeriving
                    , OverloadedStrings
                    , ImplicitParams
                    , PatternSynonyms
                    , TupleSections
                    , TypeApplications

  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -fno-warn-unused-imports
                    -fno-warn-unused-matches
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends: aeson
               , aeson-pretty
               , base >=4.7 && <5
               , bytestring >= 0.10.8.2
               , co-log
               , co-log-core
               , concur-core
               , concur-replica
               , containers
               , hsass
               , mtl
               , replica
               , sbv >= 8.9
               , stm
               , text
               , redfin-lib
               , wai
               , wai-middleware-static
               , websockets
  default-language: Haskell2010
